data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4361.wast
;; 10. **Test Description**: Perform a `call_indirect` meant to exceed table bounds, followed by `br_if` to handle branch condition based on successfully detecting and handling out-of-bounds trap conditions.      **Specific Constraint**: Properly managing table bounds checks and out-of-bounds conditions.      **Incorrect Condition Evaluation**: Verify if `br_if` accurately handles and evaluates conditions leading to out-of-bounds traps.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $exceed-table-bounds
      (call_indirect (type 0) (i32.const 2)) 
      (br_if 0 (i32.const 0))
    )
  )
  "out of bounds"
)